--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -3,7 +3,7 @@
 
     <section class="main">
         <input id="toggle-all" class="toggle-all" type="checkbox">
-        <label for="toggle-all">Marcar todas como completas</label>
+        <label for="toggle-all" (click)="toggleAll()">Marcar todas como completas</label>
 
         <app-todos-list></app-todos-list>
     </section>
