--- a/src/app/todo/todos-footer/todos-footer.component.html
+++ b/src/app/todo/todos-footer/todos-footer.component.html
@@ -1,19 +1,14 @@
 <!-- This footer should hidden by default and shown when there are todos -->
 <footer class="footer">
     <!-- This should be `0 items left` by default -->
-    <span class="todo-count"><strong>0</strong> tareas restantes</span>
+    <span class="todo-count"><strong>{{pendientes}}</strong> tareas restantes</span>
     <!-- Remove this if you don't implement routing -->
     <ul class="filters">
-        <li>
-            <a class="selected" href="#/">Todos</a>
-        </li>
-        <li>
-            <a href="#/active">Activos</a>
-        </li>
-        <li>
-            <a href="#/completed">Completados</a>
+        <!-- selected -->
+        <li (click)="CambiarFiltro(filtro)" *ngFor="let filtro of filtrosValids">
+            <a [ngClass]="{'selected': filtro === filtroActual}">{{filtro}}</a>
         </li>
     </ul>
     <!-- Hidden if no completed items are left ↓ -->
-    <button class="clear-completed">Limipiar completados</button>
+    <button class="clear-completed" (click)="LimpiarElementos()">Limipiar completados</button>
 </footer>
