--- a/src/app/todo/todos-item/todos-item.component.html
+++ b/src/app/todo/todos-item/todos-item.component.html
@@ -4,7 +4,7 @@
     <div class="view">
         <input class="toggle" type="checkbox" [formControl]="chkField" [checked]="todo.completado">
         <label (dblclick)="editar()">{{todo.texto}}</label>
-        <button class="destroy"></button>
+        <button class="destroy" (click)="Borrar()"></button>
     </div>
     <input #txtInputFisico class="edit" [value]="todo.texto" [formControl]="txtInput" (blur)="TerminarEdicion()">
 </li>
